--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/cssClass/PropertyLayoutCssClassPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/cssClass/PropertyLayoutCssClassPage-description.adoc
@@ -4,7 +4,7 @@ To highlight certain information on the page, it can sometimes be helpful to sty
 
 The `cssClass` attribute indicates that the `<div>` containing the property or parameter component within the UI should set the specified CSS class:
 
-* for properties, the attribute can be specified using either the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#cssclass[@PropertyLayout#cssClass] annotation, or using the `Xxx.layout.xml` layout file.
+* for properties, the attribute can be specified using either the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#cssclass[@PropertyLayout#cssClass] annotation, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
 
 * for parameters, the attribute can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/ParameterLayout.html#cssclass[@PropertyLayout#cssClass] annotation
 
@@ -13,7 +13,7 @@ The `application.css` file can then be used to apply styling to that CSS class
 == How this demo works
 
 This page contains two properties.
-The `name` property uses `@Property#cssClass` to specify a custom CSS class of "red", while the `notes` property specifies a custom CSS class using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml].
+The `name` property uses `@Property#cssClass` to specify a custom CSS class of "red", while the `notes` property specifies a custom CSS class using the `layout.xml` file.
 
 Both properties can be edited directly, but the `name` property also has an associated action to update it.
 
