--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/named/PropertyLayoutNamedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/named/PropertyLayoutNamedPage-description.adoc
@@ -4,17 +4,16 @@ The name of a property or parameter is used as the label of the field in the UI.
 Normally the name is inferred from the name of the corresponding field or parameter in code.
 This inferred name can be however be overridden using various mechanisms with an explicit value:
 
-* for properties, the name can be specified using either the `@PropertyLayout` annotation, or a meta-annotation, or using the `Xxx.layout.xml` layout file.
+* for properties, the name can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#named[@PropertyLayout#named] attribute, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
 
-* for parameters, the name can be specified using either the `@ParameterLayout` annotation, or a meta-annotation.
+* for parameters, the attribute can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#named[@ParameterLayout#named] annotation.
 
 This is useful for example if the desired name is a Java keyword (such as "default", or "package").
 
-Names can also include HTML markup.
-This can optionally be escaped.
 
+== How this demo works
 
-== Annotated
+=== Annotated
 
 The name can be specified explicitly using an annotation:
 
@@ -34,9 +33,11 @@ include::PropertyLayoutNamedPage_updateWithParameterLayout.java[tags=annotation]
 ----
 <.> explicitly specifies the name of the parameter
 
-== Layout File
+=== Layout File
 
-For properties (not parameters), the name can be specified using the `Xxx.layout.xml` file:
+The name can be specified using the `Xxx.layout.xml` file:
+
+WARNING: currently this does not work; link:https://issues.apache.org/jira/browse/CAUSEWAY-3443[CAUSEWAY-3443].
 
 * property definition:
 +
@@ -59,57 +60,4 @@ include::PropertyLayoutNamedPage.java[tags=layout-file]
 
 One advantage of the layout file over the annotation is that the layout file is dynamic: it can be modified and the changes reloaded in a running application.
 
-TIP: It is sometimes necessary to invoke the `Rebuild Metamodel` action to see this take effect.
-
-== Meta-annotated
-
-The name can also be specified using a custom meta-annotation:
-
-* the meta-annotation is defined as:
-+
-[source,java]
-----
-include::NamedMetaAnnotation.java[tags=class]
-----
-<.> annotated for a property ...
-<.> \... and for a parameter.
-<.> annotation can be applied to a property (either its getter or if using link:https://projectlombok.org/[Lombok] the field directly)
-<.> annotation can be applied to a parameter
-<.> annotation can be applied to a type (ie, meta-meta annotations recursively)
-
-* and can be applied to a property:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutNamedPage.java[tags=meta-annotated]
-----
-<.> property's name is inherited from the meta-annotation
-
-* or can be applied to a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutNamedPAge_updateWithMetaAnnotation.java[tags=meta-annotation]
-----
-<.> parameter's name is inherited from the meta-annotation
-
-The meta-annotation can itself be overridden:
-
-* in a property:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutNamedPage.java[tags=meta-annotated-overridden]
-----
-<.> name from meta-annotation ...
-<.> \... is overridden by the `@PropertyLayout` annotation
-
-* or a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutNamedPage_updateWithMetaAnnotationOverridden.java[tags=meta-annotation-overridden]
-----
-<.> name from meta-annotation ...
-<.> \... is overridden by the `@PropertyLayout` annotation
 
