--- a/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/treenode/FileNodeVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/causeway/treenode/FileNodeVm-description.adoc
@@ -1,7 +1,8 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#navigable[@PropertyLayout#navigable] attribute allows the viewer to construct a breadcrumb trail.
-It is commonly used with objects forming a hierarchy, and so often is used in conjunction with the `TreeNode` value type.
+The framework has built-in support for a `TreeNode` value type which represents a hierarchical data structure.
+
+NOTE: This is an Apache Causeway specific data type.
 
 == How this demo works
 
@@ -14,50 +15,37 @@ It represents either a directory or a file within that filesystem.
 This is contributed by a mixin property, and is cached on HTTP session.
 You can use this to navigate into the tree and inspect the individual files, without "losing your place".
 
-* When you have drilled into the tree, a breadcrumb panel will appear near the top of the page.
-+
-This occurs because the `FileNodeVm` uses `@PropertyLayout#navigable`.
 
-=== Navigable (Breadcrumbs)
-
-For all ``FileNode``s except the initial root node, a breadcrumb trail is rendered.
-
-The framework constructs the breadcrumbs using the value returned by the property with the `navigable` attribute.
-This hint should be used on no more than one property of the object, and points back to the logical parent of the domain object:
-
-[source,java,indent=0]
-----
-include::FileNodeVm.java[tags=navigable]
-----
-<.> indicates that this property returns a reference to its "parent" within some hierarchy
-<.> there is no requirement for the property to be visible.
-
-In the case of this demo app, the parent also happens to be a `FileNode`.
-However, in general, any type of the parent can be different from the type of the child.
-
-The returned parent is itself queried recursively, until eventually an object is returned that has no parent.
-The framework renders the breadcrumbs from this sequence of parents.
-
-TIP: For a domain entity, the implementation above would be a lookup of the parent entity from a repository.
-For a view model, we can simply instantiate the parent because view models have value semantics in this respect.
-
-=== Icon
-
-It's common for hierarchical objects to indicate their nature using an icon:
-
-[source,java,indent=0]
-----
-include::FileNodeVm.java[tags=iconName]
-----
-
-where `FileNodeType` is:
-
-[source,java,indent=0]
-----
-include::FileNodeType.java[tags=class]
-----
-
-Note that there are SVG files for each of the instances of this enum, namely `FileNodeVm-FILE_SYSTEM_ROOT.svg`, `FileNodeVm-DIRECTORY.svg` and `FileNodeVm-FILE.svg`.
+//
+// THE FOLLOWING DOESN'T ADD MUCHdoesn't add much:
+//
+// === Properties
+//
+// The properties of `FileNodeVm` are defined as:
+//
+// [source,java,indent=0]
+// ----
+// include::FileNodeVm.java[tags=properties]
+// ----
+//
+//
+// === Icon
+//
+// It's common for hierarchical objects to indicate their nature using an icon:
+//
+// [source,java,indent=0]
+// ----
+// include::FileNodeVm.java[tags=iconName]
+// ----
+//
+// where `FileNodeType` is:
+//
+// [source,java,indent=0]
+// ----
+// include::FileNodeType.java[tags=class]
+// ----
+//
+// Note that there are SVG files for each of the instances of this enum, namely `FileNodeVm-FILE_SYSTEM_ROOT.svg`, `FileNodeVm-DIRECTORY.svg` and `FileNodeVm-FILE.svg`.
 
 
 === Tree
