--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/typicalLength/PropertyLayoutTypicalLengthPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/typicalLength/PropertyLayoutTypicalLengthPage-description.adoc
@@ -2,9 +2,11 @@
 
 The `typicalLength` attribute is intended to indicate the size that a textfield should be rendered as a visual indicator of the expected length:
 
-* for properties, the attribute can be specified using either the `@PropertyLayout` annotation, or using the `Xxx.layout.xml` layout file.
+* for properties, the typical length can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#typicallength[@PropertyLayout#typicalLength] attribute, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
 
-* for parameters, the attribute can be specified using either the `@ParameterLayout` annotation.
+* for parameters, the typical length can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#typicallength[@ParameterLayout#typicalLength] annotation.
+
+Note that link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#maxlength[@PropertyLayout#maxLength] and `@PropertyLayout#typicalLength()` are not related - the first prevents the property from holding more than the specified number of characters, the latter is a layout hint relating to the size of the textfield.
 
 [CAUTION]
 ====
@@ -13,36 +15,33 @@ The Wicket viewer does not use this hint, instead preferring to render all textf
 In other words, providing this hint has no impact on the UI (as rendered by the Wicket viewer, at least).
 ====
 
-[NOTE]
-====
-`@Property#maxLength()` and `@PropertyLayout#typicalLength()` are not related - the first prevents the property from holding more than the specified number of characters, the latter is a layout hint relating to the size of the textfield.
-====
+== How this demo works
 
-== Annotated
+This page has two editable properties, `name` and `notes`.
+Both have the `typicalLength` attribute, using either an annotation or the `.layout.xml` file.
+The `name` property can also be updated using an action, where the action parameter also specifies the typical length.
 
-The `typicalLength` attribute can be specified explicitly using an annotation:
+In terms of code:
 
-* for properties, using `@PropertyLayout#typicalLength()`:
+* for the `name` property:
 +
 [source,java,indent=0]
 ----
 include::PropertyLayoutTypicalLengthPage.java[tags=annotation]
 ----
-<.> explicitly specifies that the property should use a textbox
+<.> explicitly specifies the typical length
 
-* for parameters, using `@ParameterLayout#typicalLength()`:
+* for the action that updates the `name` property:
 +
 [source,java,indent=0]
 ----
-include::PropertyLayoutTypicalLengthPage_updateWithParameterLayout.java[tags=annotation]
+include::PropertyLayoutTypicalLengthPage_updateName.java[tags=annotation]
 ----
-<.> explicitly specifies that the parameter should use a textbox
+<.> explicitly specifies the typical length
 
-== Layout File
+* for the `notes` property:
 
-For properties (not parameters), the `typicalLength` attribute can be specified using the `Xxx.layout.xml` file:
-
-* property definition:
+** the property has no annotations:
 +
 [source,java,indent=0]
 ----
@@ -50,98 +49,12 @@ include::PropertyLayoutTypicalLengthPage.java[tags=layout-file]
 ----
 <.> `typicalLength` hint is _not_ present.
 
-* layout file snippet:
+** instead, the attribute is specified in the layout file:
 +
 [source,xml,indent=0,tabsize=4]
 ----
-<cpt:property id="propertyUsingLayout" typicalLength="10"/>
+<cpt:property id="notes" typicalLength="10"/>
 ----
-// TODO: for some reason this doesn't include correctly in the app...
-//include::PropertyLayoutTypicalLengthPage.layout.xml[tags=layout-file]
 
 One advantage of the layout file over the annotation is that the layout file is dynamic: it can be modified and the changes reloaded in a running application.
-
-TIP: It is sometimes necessary to invoke the `Rebuild Metamodel` action to see this take effect.
-
-== Contributed
-
-The `@PropertyLayout` can also be applied at the class-level to mixin properties:.
-
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage_mixinProperty.java[tags=class]
-----
-<.> explicitly specifies that the contributed property should use a textbox
-
-== Meta-annotated
-
-The `typicalLength` attribute can also be specified using a custom meta-annotation:
-
-* the meta-annotation is defined as:
-+
-[source,java]
-----
-include::TypicalLengthMetaAnnotation.java[tags=class]
-----
-<.> annotated for a property ...
-<.> \... and for a parameter.
-<.> annotation can be applied to a property (either its getter or the field directly)
-<.> annotation can be applied to a parameter
-<.> annotation can be applied to a type (ie, meta-meta annotations recursively)
-
-* and can be applied to a property:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage.java[tags=meta-annotated]
-----
-<.> hint is inherited from the meta-annotation
-
-* or can be applied to a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage_updateWithMetaAnnotation.java[tags=meta-annotation]
-----
-<.> hint is inherited from the meta-annotation
-
-* or can be applied to mixin:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage_mixinPropertyWithMetaAnnotation.java[tags=class]
-----
-<.> hint is inherited from the meta-annotation
-
-=== Meta-annotated Overridden
-
-The meta-annotation can itself be overridden:
-
-* in a property:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage.java[tags=meta-annotated-overridden]
-----
-<.> hint from meta-annotation ...
-<.> \... is overridden by the `@PropertyLayout` annotation
-
-* or a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage_updateWithMetaAnnotationOverridden.java[tags=meta-annotation-overridden]
-----
-<.> hint from meta-annotation ...
-<.> \... is overridden by the `@ParameterLayout` annotation
-
-
-* or a mixin:
-+
-[source,java,indent=0]
-----
-include::PropertyLayoutTypicalLengthPage_mixinPropertyWithMetaAnnotationOverridden.java[tags=meta-annotation-overridden]
-----
-<.> hint from meta-annotation ...
-<.> \... is overridden by the `@PropertyLayout` annotation
 
