--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/xxxLifecycleEvent/DomainObjectXxxLifecycleEventPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/xxxLifecycleEvent/DomainObjectXxxLifecycleEventPage-description.adoc
@@ -9,7 +9,7 @@ However, using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/
 * link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#createdlifecycleevent[@DomainObject#createdLifecycleEvent] - when an entity is instantiated in memory (but not yet persisted).
 Must be a subclass of https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/events/lifecycle/ObjectCreatedEvent[ObjectCreatedEvent].
 +
-CAUTION: the "created" lifecycle event is currently not emitted; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3408[CAUSEWAY-3408].
+CAUTION: The new-ed up entity must be passed to (or created via) either `FactoryService.detachedEntity(...)` or `RepositoryService.detachedEntity(...)` for the 'created' lifecycle event to be fired.   
 
 * link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#persistinglifecycleevent[@DomainObject#persistingLifecycleEvent] - when a newly instantiated entity is about to be INSERTed for the first time to the database.
 Must be a subclass of https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/events/lifecycle/ObjectPersistingEvent[ObjectPersistingEvent].
