--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/typeOf/ActionTypeOfPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/typeOf/ActionTypeOfPage-description.adoc
@@ -2,11 +2,12 @@
 
 CAUTION: this feature is currently broken; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3423[CAUSEWAY-3423].
 
-Actions that return lists of objects are usually parameterized, for example, returning `List<Customer>` or `List<Order>`.
+We use the term "standalone collection" for a list or a set that is returned from an action.
+Such collection are usually parameterized, for example, returning `List<Customer>` or `List<Order>`.
 The framework uses the generic parameter to ensure that the list is rendered appropriately for that element type.
 
-In some rare scenarios though it may be necessary to return only a raw (non-parameterized) `List`.
-In these cases the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Action.html#typeof[@Action#typeOf] attribute can be used to indicate the element type of the returned `List`.
+In some rare scenarios though it may be necessary to return only a raw (non-parameterized) collection type (eg `List` or `Set`).
+In these cases the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Action.html#typeof[@Action#typeOf] attribute can be used to indicate the element type of the returned collection.
 
 == How this demo works
 
@@ -49,5 +50,7 @@ include::ActionTypeOfPage.java[tags=action-returning-raw-list-but-annotated]
 <.> action defines a raw list
 +
 The standalone list returned by this object should show the full details of the child object.
++
+CAUTION: this feature is currently broken - try entering 'M' and only the icons are shown.  Tracked with link:https://issues.apache.org/jira/browse/CAUSEWAY-3423[CAUSEWAY-3423].
 
 
