--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/Collection/typeOf/CollectionTypeOfPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/Collection/typeOf/CollectionTypeOfPage-description.adoc
@@ -2,6 +2,40 @@
 
 The `typeOf` attribute ...
 
-WARNING: TODO[CAUSEWAY-3311]
-The type-of the elements held within the collection.
-This is only provided as a fallback; usually the framework can infer the element type of the collection from the collection method’s generic type.
+We use the term "parented collection" for a collection of objects that is "owned" by another object, for example the collection of ``OrderItem``s held by an `Order`.
+Such collections when declared are usually parameterized, for example `Set<OrderItem>`.
+The framework uses the generic parameter to ensure that the collection is rendered appropriately for that element type.
+
+In some rare scenarios though it may be necessary to return only a raw (non-parameterized) collection type (eg `Set` or `List`).
+In these cases the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Collection.html#typeof[@Collection#typeOf] attribute can be used to indicate the element type of the returned collection.
+
+== How this demo works
+
+This page object defines two collections, both of which use a raw collection type.
+The `children` collection is annotated with `@Collection#typeOf`, and so the framework is able to show the columns of the children.
+However, the `otherChildren` collection has no such annotation, meaning that the framework knows only that it is a collection of ``Object``s.
+No columns are shown, only an icon.
+
+In terms of code:
+
+* the `children` collection is annotated:
++
+[source,java,indent=0]
+----
+include::CollectionTypeOfPage.java[tags=class-collections-children]
+----
+<.> hint as to the element type.
+This results in columns in the table.
+<.> the fact that this is a raw collection type does not matter, because of the annotation
+
+* the `otherChildren` collection is not annotated:
++
+[source,java,indent=0]
+----
+include::CollectionTypeOfPage.java[tags=class-collections-other-children]
+----
+<.> no hint as to the element type.
+<.> also a raw collection type.
++
+As a result, the framework has no information as to the type of element in the collection, and therefore can show only the object icons, no columns.
+
