--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/describedAs/PropertyLayoutDescribedAsPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/describedAs/PropertyLayoutDescribedAsPage-description.adoc
@@ -1,7 +1,9 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
+WARNING: currently no tooltip is displayed for descriptions defined by layout.xml file; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3441[CAUSEWAY-3441].
+
 Often the end-user of your application will be a frequent user and will know by sight the purpose of the various properties, collections and actions that are displayed.
-But, for less experienced users, or for new features, defining a `description` which provides brief additional information for the user may help.
+But, for less experienced users, or for new features, providing a description to provide brief additional information to the user may be of help.
 
 * for properties, the description can be specified using either the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#describedas[@PropertyLayout#describedAs] annotation, or a meta-annotation, or using the `Xxx.layout.xml` layout file.
 
@@ -15,12 +17,19 @@ NOTE: If the label is suppressed (using link:https://causeway.apache.org/refguid
 
 == How this demo works
 
-This page object has three properties, each of which has a description.
-The first property also has a corresponding action to update it.
+This page object has three properties, `name`, `notes` and `address`.
+Each of these has a description.
+For `name` and `notes`, this description should be visible as a tooltip.
+The `name` property also has a corresponding action to update it, whose parameter _also_ has a description (shown as a tooltip).
 
-For the `name` property:
+The `address` property is a counter-example though: even though it has a description, no tooltip is displayed.
+See below for details as to why this is the case.
 
-* its description is specified using `@PropertyLayout#describedAs()`:
+In terms of code:
+
+* For the `name` property:
+
+** its description is specified using `@PropertyLayout#describedAs()`:
 +
 [source,java,indent=0]
 ----
@@ -37,25 +46,22 @@ include::PropertyLayoutDescribedAsPage_updateName.java[tags=annotation]
 ----
 <.> explicitly specifies the description of the parameter
 
-For the `notes property, its description is specified using the `.layout.xml` file:
-
+* For the `notes` property, its description is specified using the `.layout.xml` file:
++
 [source,xml,indent=0,tabsize=4]
 ----
 <cpt:property id="notes">
     <cpt:describedAs>Notes about this object</cpt:describedAs>
 </cpt:property>
 ----
-// for some reason this doesn't include correctly in the app...
-//include::PropertyLayoutDescribedAsPage.layout.xml[tags=layout-file]
++
+WARNING: currently no tooltip is displayed for descriptions defined by layout.xml file; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3441[CAUSEWAY-3441].
 
-WARNING: currently no tooltip is displayed; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3441[CAUSEWAY-3441].
-
-For the `address` property, even though it has a description, it will not be rendered because it _also_ has a `labelPosition` which results in the label being suppressed:
-
+* The `address` property is a counter-example: even though it has a description, it will not be rendered because it _also_ has a `labelPosition` which results in the label being suppressed:
++
 [source,java,indent=0,tabsize=4]
 ----
 include::PropertyLayoutDescribedAsPage.java[tags=label-position]
 ----
 <.> A labelPosition of `NONE` suppresses the label and therefore also the description tooltip.
-
 
