--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/named/CollectionLayoutNamedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/named/CollectionLayoutNamedPage-description.adoc
@@ -1,7 +1,35 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `named` attribute ...
+The name of a collection is used as the label of the field in the UI.
+Normally the name is inferred from the name of the corresponding field or getter method in code.
+This inferred name can be however be overridden using either the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/CollectionLayout.html#named[@CollectionLayout#named] attribute, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
 
-WARNING: TODO[CAUSEWAY-3311]
-Name of this collection (overriding the name derived from its name in code).
-A typical use case is if the desired name is a reserved Java keyword, such as default or package.
+This is useful for example if the desired name is a Java keyword (such as "package").
+
+
+== How this demo works
+
+This page object has two collections, and both has had their name explicitly specified using each of the two mechanisms.
+
+In terms of code:
+
+* the `children` property has its name specified using the `@CollectionLayout#named()` annotation:
++
+[source,java,indent=0]
+----
+include::CollectionLayoutNamedPage.java[tags=children]
+----
+<.> explicitly specifies the name of the collection
+
+* meanwhile, the `moreChildren` property has its name specified using the `Xxx.layout.xml` file:
++
+[source,xml,indent=0,tabsize=4]
+----
+<cpt:collection id="moreChildren">
+    <cpt:named>Named using layout.xml</cpt:named>
+</cpt:collection>
+----
++
+One advantage of the layout file over the annotation is that the layout file is dynamic: it can be modified and the changes reloaded in a running application.
+
+
