--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/named/PropertyLayoutNamedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/named/PropertyLayoutNamedPage-description.adoc
@@ -1,7 +1,7 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
 The name of a property or parameter is used as the label of the field in the UI.
-Normally the name is inferred from the name of the corresponding field or parameter in code.
+Normally the name is inferred from the name of the corresponding field (or getter method) or parameter in code.
 This inferred name can be however be overridden using various mechanisms with an explicit value:
 
 * for properties, the name can be specified using the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#named[@PropertyLayout#named] attribute, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
@@ -13,11 +13,12 @@ This is useful for example if the desired name is a Java keyword (such as "defau
 
 == How this demo works
 
-=== Annotated
+This page object has two properties, and both has had their name explicitly specified using each of the two mechanisms.
+The first also has an action whose parameter name has been explicitly set.
 
-The name can be specified explicitly using an annotation:
+In terms of code:
 
-* for properties, using `@PropertyLayout#named()`:
+* the `propertyUsingAnnotation` property, unsurprisingly, has its name specified using the `@PropertyLayout#named()` annotation:
 +
 [source,java,indent=0]
 ----
@@ -25,7 +26,7 @@ include::PropertyLayoutNamedPage.java[tags=annotation]
 ----
 <.> explicitly specifies the name of the property
 
-* for parameters, using `@ParameterLayout#named()`:
+* the parameter of the action that updates it has _its_ parameter named using `@ParameterLayout#named()`:
 +
 [source,java,indent=0]
 ----
@@ -33,13 +34,9 @@ include::PropertyLayoutNamedPage_updateWithParameterLayout.java[tags=annotation]
 ----
 <.> explicitly specifies the name of the parameter
 
-=== Layout File
+* meanwhile, the `propertyUsingLayout` property has its name specified using the `Xxx.layout.xml` file:
 
-The name can be specified using the `Xxx.layout.xml` file:
-
-WARNING: currently this does not work; link:https://issues.apache.org/jira/browse/CAUSEWAY-3443[CAUSEWAY-3443].
-
-* property definition:
+** the property's field is:
 +
 [source,java,indent=0]
 ----
@@ -47,7 +44,7 @@ include::PropertyLayoutNamedPage.java[tags=layout-file]
 ----
 <.> `named` hint is _not_ present.
 
-* layout file snippet:
+** while its layout file snippet is:
 +
 [source,xml,indent=0,tabsize=4]
 ----
@@ -55,9 +52,8 @@ include::PropertyLayoutNamedPage.java[tags=layout-file]
     <cpt:named>Named using layout.xml</cpt:named>
 </cpt:property>
 ----
-// TODO: for some reason this doesn't include correctly in the app...
-//include::PropertyLayoutNamedPage.layout.xml[tags=layout-file]
 
++
 One advantage of the layout file over the annotation is that the layout file is dynamic: it can be modified and the changes reloaded in a running application.
 
 
