--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/paged/CollectionLayoutPagedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/paged/CollectionLayoutPagedPage-description.adoc
@@ -2,9 +2,13 @@
 
 If a collection contains many instances, then by default these are paged.
 The link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObjectLayout.html#paged[@DomainObjectLayout#paged] is used to specify how many instances of the domain object should be shown for parented collections (those belonging to an object).
-This can be overridden on a case-by-case basis using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/CollectionLayout.html#paged[@CollectionLayout#paged].
+(It is also used for standalone collections (those returned from an action invocation).
 
-NOTE: the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObjectLayout.html#paged[@DomainObjectLayout#paged] value is also used for standalone collections (those returned from an action invocation).
+The deefault provided by `@DomainObject#paged` can be overridden on a case-by-case basis using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/CollectionLayout.html#paged[@CollectionLayout#paged].
+
+IMPORTANT: the paging that occurs is at the application-layer, not the database layer.
+In other words, the framework resolves _all_ of the objects are meet the criteria, and then manages the paging.
+There could therefore be performance/memory issues if too many objects are returned by the Kquery.
 
 == How this demo works
 
