--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/sortedBy/CollectionLayoutSortedByPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/collections/CollectionLayout/sortedBy/CollectionLayoutSortedByPage-description.adoc
@@ -1,10 +1,37 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `sortedBy` attribute ...
+When dealing with collections of entities, most commonly the entity type will implement `Comparable`, (ie to have a natural ordering), and the collection will be defined as a `java.util.SortedSet`.
+In such a set up, the collection will be render the objects in this order.
 
-WARNING: TODO[CAUSEWAY-3311]
-Indicates that the elements in a ( java.util.SortedSet ) collection should be sorted according to a different order than the natural sort order, as defined by the specified java.util.Comparator .
-Whenever there is a collection of type java.util.SortedSet , the domain entity referenced is expected to implement Comparable , ie to have a natural ordering. In effect tis means that all domain entities should provide a natural ordering.
-However, in some circumstances the ordering of collection may be different to the entity’s natural ordering. For example, the entity may represent an interval of time sorted by its startDate ascending, but the collection may wish to sort by startDate .
-The purpose of this annotation is to provide a java.util.Comparator such that the collection may be sorted in an order more suitable to the context.
+If a collection is a standalone collection resulting from invoking an action, then the objects by default will be rendered in the order that the action populated the list.
+If the action is some sort of finder that ultimately invokes a repository query, then the order will be according to the JPA/JDO/SQL query.
+
+The purpose of the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObjectLayout.html#sortedby[@DomainObjectLayout#sortedBy] `sortedBy` attribute is to override any existing sorting at the application/persistence layer and to instead sort the objects at the presentation layer.
+
+== How this demo works
+
+To the left is a collection of objects, where their displayed order is according to alphabetical `name` of these objects.
+This is accomplished using the `sortedBy` attribute, passing in a `NameComparator`.
+
+In terms of code:
+
+* the `children` collection is defined as:
++
+[source,java,indent=0]
+.CollectionLayoutSortedByPage.java
+----
+include::CollectionLayoutSortedByPage.java[tags=children]
+----
+<.> sort using the `NameComparator` class
+
+* while the `NameComparator` class is defined by:
++
+[source,java,indent=0]
+.NameComparator.java
+----
+include::NameComparator.java[tags=comparator]
+----
+<.> utility class provided by the framework (provides helpers for compareTo, equals, hashCode and toString)
+<.> compare by the `name` property of the child objects
+
 
