--- a/antora/components/refguide-index/modules/applib/pages/index/layout/component/DomainObjectLayoutData.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/component/DomainObjectLayoutData.adoc
@@ -22,8 +22,10 @@ class DomainObjectLayoutData {
   void setDescribedAs(String describedAs)
   String getNamed()
   void setNamed(String named)
-  String getPlural()
-  void setPlural(String plural)
+  String getPlural()     // <.>
+  void setPlural(String plural)     // <.>
+  Integer getPaged()
+  void setPaged(Integer paged)
   Class<? extends TableDecorator> getTableDecorator()
   void setTableDecorator(Class<? extends TableDecorator> tableDecorator)
   String getMetadataError()     // <.>
@@ -35,6 +37,26 @@ class DomainObjectLayoutData {
 }
 ----
 
+<.> xref:#getPlural_[getPlural()]
++
+--
+[WARNING]
+====
+[red]#_deprecated:_#
+
+- unused, to remove.
+====
+--
+<.> xref:#setPlural_String[setPlural(String)]
++
+--
+[WARNING]
+====
+[red]#_deprecated:_#
+
+- unused, to remove.
+====
+--
 <.> xref:#getMetadataError_[getMetadataError()]
 +
 --
@@ -52,6 +74,26 @@ The link to access this resource from the REST API (Restful Objects viewer).
 --
 
 == Members
+
+[#getPlural_]
+=== getPlural()
+
+[WARNING]
+====
+[red]#_deprecated:_#
+
+- unused, to remove.
+====
+
+[#setPlural_String]
+=== setPlural(String)
+
+[WARNING]
+====
+[red]#_deprecated:_#
+
+- unused, to remove.
+====
 
 [#getMetadataError_]
 === getMetadataError()
